# utils

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml
benches/: fib_bench.rs  stack_bench.rs
clibs/: example.c  example.h
src/: lib.rs  main.rs
src/lfs/: queue.rs  stack.rs
src/math/: fib.rs  general.rs  mod.rs
src/math/matrix/: decomp.rs  matrix.rs  mod.rs  ops.rs
src/math/matrix/utils/: error.rs  macros.rs
src/unsafe/: io.rs  mem.rs
