[package]
name = "wg-utils"
version = "0.1.0"
description = "Personal Utility Functions"
license = "MIT"
repository = "https://github.com/wyattgill/utility"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"
libc = "0.2.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stack_bench"
harness = false

[[bench]]
name = "fib_bench"
harness = false

[profile.bench]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
